<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Oboco</string>
    <string name="app_description">A client for Oboco.</string>

    <string name="drawer_menu_account">Account</string>
    <string name="drawer_menu_book_collection_browser">Browse</string>
    <string name="drawer_menu_download_browser">Downloads</string>
    <string name="drawer_menu_download_manager_browser">Downloads manager</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="account_login_base_url_hint">Base URL: http(s)://address:port</string>
    <string name="account_login_name_hint">Name</string>
    <string name="account_login_password_hint">Password</string>
    <string name="account_login_show_password">Show password</string>
    <string name="account_login_log_in">Log in</string>

    <string name="account_logout_log_out">Log out</string>
    <string name="account_logout_password_hint">Password</string>
    <string name="account_logout_update_password_hint">New password</string>
    <string name="account_logout_show_password">Show password</string>
    <string name="account_logout_update_password">Update password</string>

    <string name="book_reader_menu_view_mode">View mode</string>
    <string name="book_reader_menu_view_mode_aspect_fill">Aspect fill</string>
    <string name="book_reader_menu_view_mode_aspect_fit">Aspect fit</string>
    <string name="book_reader_menu_view_mode_fit_width">Fit width</string>
    <string name="book_reader_menu_reading_mode">Reading mode</string>
    <string name="book_reader_menu_reading_mode_left_to_right">Left to right</string>
    <string name="book_reader_menu_reading_mode_right_to_left">Right to left</string>
    <string name="book_reader_dialog_open">Open book?</string>
    <string name="book_reader_dialog_open_positive">Yes</string>
    <string name="book_reader_dialog_open_negative">No</string>

    <string name="book_browser_menu_filter">Filter</string>
    <string name="book_browser_menu_filter_type_all">All</string>
    <string name="book_browser_menu_filter_type_new">New</string>
    <string name="book_browser_menu_filter_type_to_read">To read</string>
    <string name="book_browser_menu_filter_type_latest_read">Latest read</string>
    <string name="book_browser_menu_filter_type_read">Read</string>
    <string name="book_browser_menu_filter_type_reading">Reading</string>
    <string name="book_browser_menu_filter_type_unread">Unread</string>
    <string name="book_browser_menu_book_mark">Mark</string>
    <string name="book_browser_menu_book_download">Download</string>
    <string name="book_browser_dialog_mark">Mark book?</string>
    <string-array name="book_browser_dialog_mark_as_array">
        <item>To read</item>
        <item>Read</item>
        <item>Unread</item>
    </string-array>
    <string name="book_browser_dialog_mark_negative">No</string>
    <string name="book_browser_dialog_download">Download book?</string>
    <string name="book_browser_dialog_download_positive">Yes</string>
    <string name="book_browser_dialog_download_negative">No</string>
    <string name="book_browser_empty">No books.</string>

    <string name="book_collection_browser_menu_search">Search</string>
    <string name="book_collection_browser_menu_filter">Filter</string>
    <string name="book_collection_browser_menu_filter_type_root">Root</string>
    <string name="book_collection_browser_menu_filter_type_all">All</string>
    <string name="book_collection_browser_menu_filter_type_new">New</string>
    <string name="book_collection_browser_menu_filter_type_to_read">To read</string>
    <string name="book_collection_browser_menu_filter_type_latest_read">Latest read</string>
    <string name="book_collection_browser_menu_filter_type_read">Read</string>
    <string name="book_collection_browser_menu_filter_type_reading">Reading</string>
    <string name="book_collection_browser_menu_filter_type_unread">Unread</string>
    <string name="book_collection_browser_menu_book_collection_mark">Mark</string>
    <string name="book_collection_browser_menu_book_collection_download">Download</string>
    <string name="book_collection_browser_dialog_mark">Mark books?</string>
    <string-array name="book_collection_browser_dialog_mark_as_array">
        <item>To read</item>
        <item>Read</item>
        <item>Unread</item>
    </string-array>
    <string name="book_collection_browser_dialog_mark_negative">No</string>
    <string name="book_collection_browser_dialog_download">Download books?</string>
    <string name="book_collection_browser_dialog_download_positive">Yes</string>
    <string name="book_collection_browser_dialog_download_negative">No</string>
    <string name="book_collection_browser_empty">No books.</string>
    <string name="book_collection_browser_dialog_search">Search books?</string>
    <string name="book_collection_browser_dialog_search_hint">Name</string>
    <string name="book_collection_browser_dialog_search_positive">Yes</string>
    <string name="book_collection_browser_dialog_search_negative">No</string>

    <string name="download_browser_dialog_delete_book_collection">Delete books?</string>
    <string name="download_browser_dialog_delete_book">Delete book?</string>
    <string name="download_browser_dialog_delete_positive">Yes</string>
    <string name="download_browser_dialog_delete_negative">No</string>
    <string name="download_browser_menu_book_delete">Delete</string>
    <string name="download_browser_menu_book_collection_delete">Delete</string>

    <plurals name="download_manager_browser_number_of_downloads">
        <item quantity="one">%d download</item>
        <item quantity="other">%d downloads</item>
    </plurals>
    <string name="download_manager_browser_dialog_download_start">Start download?</string>
    <string name="download_manager_browser_dialog_download_stop">Stop download?</string>
    <string name="download_manager_browser_dialog_download_positive">Yes</string>
    <string name="download_manager_browser_dialog_download_negative">No</string>
    <string name="download_manager_browser_menu_download_start">Start</string>
    <string name="download_manager_browser_menu_download_stop">Stop</string>

    <string name="download_book_collection_worker_download">Download books</string>
    <string name="download_book_collection_worker_download_stop">Stop</string>

    <string name="download_book_worker_download">Download book</string>
    <string name="download_book_worker_download_stop">Stop</string>

    <string name="action_user_log_in_name_password">You are logged in.</string>
    <string name="action_user_log_in_name_password_error_base_url">Set base URL: http(s)://address:port.</string>
    <string name="action_user_log_in_name_password_error_name">Set name.</string>
    <string name="action_user_log_in_name_password_error_password">Set password.</string>
    <string name="action_user_log_in_name_password_error">We can not log in. Are the name and the password correct?</string>
    <string name="action_user_log_in_token_error">You are logged out.</string>
    <string name="action_user_log_out">You are logged out.</string>
    <string name="action_user_update_password">The password is updated.</string>
    <string name="action_user_update_password_error_password">Set password.</string>
    <string name="action_user_update_password_error_update_password">Set update password.</string>
    <string name="action_user_update_password_error">We can not update the password. Is the password correct?</string>
    <string name="action_book_collections_get_error">We can not get the book collections.</string>
    <string name="action_book_collection_get_error">We can not get the book collection.</string>
    <string name="action_book_collection_delete_error">We can not delete the books.</string>
    <string name="action_books_get_error">We can not get the books.</string>
    <string name="action_book_get_error">We can not get the book.</string>
    <string name="action_book_delete_error">We can not delete the book.</string>
    <string name="action_book_page_get_error">We can not get the book page.</string>
    <string name="action_book_mark_create_update_error">We can not create/update the book mark.</string>
    <string name="action_book_mark_delete_error">We can not delete the book mark.</string>
    <string name="action_book_marks_create_update_error">We can not create/update the book marks.</string>
    <string name="action_book_marks_delete_error">We can not delete the book marks.</string>
    <string name="action_error_user_not_authenticated">You can not do that. You are logged out.</string>
    <string name="action_error_user_not_authorized">You can not do that.</string>
    <string name="action_error_user_root_book_collection">You can not do that. You do not have a root book collection.</string>
    <string name="action_error_book_scanner">We can not do that when the book scanner is started. Can you try again later?</string>
    <string name="action_error">We can not do that now. Can you try again later?</string>

    <string name="snackbar_action">Ok</string>
    
    <string name="about_version">Version</string>
    <string name="about_bubble_name">Bubble</string>
    <string name="about_bubble_description">The base of Oboco.</string>
    <string name="about_bubble_license">MIT license</string>
    <string name="about_bubble_owner">nkanaev</string>
    <string name="about_bubble_url">https://github.com/nkanaev/bubble</string>
</resources>
