<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_book_collection_browser_search"
          android:title="@string/book_collection_browser_menu_search"
          android:icon="@drawable/ic_search_white_24dp"
          app:showAsAction="always"/>
    <item android:id="@+id/menu_book_collection_browser_filter"
        android:title="@string/book_collection_browser_menu_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/menu_book_collection_browser_filter_type_root"
                    android:title="@string/book_collection_browser_menu_filter_type_root"
                    android:checked="true"/>
                <item android:id="@+id/menu_book_collection_browser_filter_type_all"
                    android:title="@string/book_collection_browser_menu_filter_type_all"/>
                <item android:id="@+id/menu_book_collection_browser_filter_type_new"
                    android:title="@string/book_collection_browser_menu_filter_type_new"/>
                <item android:id="@+id/menu_book_collection_browser_filter_type_to_read"
                    android:title="@string/book_collection_browser_menu_filter_type_to_read"/>
                <item android:id="@+id/menu_book_collection_browser_filter_type_latest_read"
                    android:title="@string/book_collection_browser_menu_filter_type_latest_read"/>
                <item android:id="@+id/menu_book_collection_browser_filter_type_read"
                    android:title="@string/book_collection_browser_menu_filter_type_read"/>
                <item android:id="@+id/menu_book_collection_browser_filter_type_reading"
                    android:title="@string/book_collection_browser_menu_filter_type_reading"/>
                <item android:id="@+id/menu_book_collection_browser_filter_type_unread"
                    android:title="@string/book_collection_browser_menu_filter_type_unread"/>
            </group>
        </menu>
    </item>
</menu>