<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightest_darkest">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/account_logout_btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/account_logout_log_out"
            android:theme="@style/AppThemeButton"/>
        <EditText
            android:id="@+id/account_logout_et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/account_logout_password_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:text=""
            android:textSize="16sp" />
        <EditText
            android:id="@+id/account_logout_et_update_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/account_logout_update_password_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:text=""
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/account_logout_cb_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/account_logout_show_password"
            android:textSize="16sp" />
        <Button
            android:id="@+id/account_logout_btn_update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/account_logout_update_password"
            android:theme="@style/AppThemeButton" />
    </LinearLayout>
</FrameLayout>
